force-app/main/default/objects/BehaviorIQ_Configuration__c/BehaviorIQ_Configuration__c.object-meta.xml
<CustomObject>
    <description>Stores configuration settings for the BehaviorIQ application.</description>
    <!-- REBRAND UPDATE: Updated Labels -->
    <label>BehaviorIQ Configuration</label>
    <pluralLabel>BehaviorIQ Configurations</pluralLabel>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>