force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Contract_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of days before contract expiry to flag for renewal attention. Used by the Pattern Analysis Service for dynamic query injection.</description>
    <inlineHelpText>Enter the number of days (1-999) before expiry that contracts should be flagged.</inlineHelpText>
    <label>Contract Expiry Alert (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>