force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Cost_Override__c.field-meta.xml
<CustomField>
    <fullName>Cost_Override__c</fullName>
    <description>JSON map of per-rule cost overrides. These values take precedence over the default Cost_Per_Incident__c in Behavior_Pattern_Rule__mdt. Format: {"Stale_Opp_90": 750, "Stale_Case_30": 100}</description>
    <inlineHelpText>JSON map of cost overrides by rule. Example: {"Stale_Opp_90": 750, "Stale_Case_30": 100}</inlineHelpText>
    <label>Cost Override</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>