force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Global_Exclusion_Filter__c.field-meta.xml
<CustomField>
    <fullName>Global_Exclusion_Filter__c</fullName>
    <description>JSON map of per-object exclusion filters. Format: {"Account": "Type != 'VIP'", "Lead": "Rating != 'Hot'"}. These conditions are automatically appended to pattern detection queries to protect sensitive records from automation.</description>
    <inlineHelpText>JSON map of exclusion filters by object. Example: {"Account": "Type != 'Strategic'", "Lead": "Rating != 'Hot'"}</inlineHelpText>
    <label>Global Exclusion Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>