force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Health_Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Health_Log_Retention_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Number of days to retain System_Health_Log__c diagnostic records. Health logs older than this are deleted during batch execution. Defaults to 90 days.</description>
    <inlineHelpText>Days to keep system health logs (30-365). Used for batch job diagnostics.</inlineHelpText>
    <label>Health Log Retention (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>