force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/High_Value_Amount_Threshold__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Amount_Threshold__c</fullName>
    <defaultValue>50000</defaultValue>
    <description>Amount threshold above which an Opportunity is considered high-value. Used by the Pattern Analysis Service for dynamic query injection.</description>
    <inlineHelpText>Enter the opportunity amount threshold that defines a high-value deal.</inlineHelpText>
    <label>High-Value Amount Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>