force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/High_Value_Inactivity_Days__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Inactivity_Days__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Number of days of inactivity after which a high-value Opportunity is flagged. Used by the Pattern Analysis Service for dynamic query injection.</description>
    <inlineHelpText>Enter the number of days (1-999) of inactivity that triggers a high-value opportunity alert.</inlineHelpText>
    <label>High-Value Inactivity (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>