force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Lead_Hoarding_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Hoarding_Days__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Number of days after which a Lead owned by a user but not contacted is flagged as hoarding. Used by the Pattern Analysis Service for dynamic query injection.</description>
    <inlineHelpText>Enter the number of days (1-999) after which owned but uncontacted leads should be flagged.</inlineHelpText>
    <label>Lead Hoarding Threshold (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>