force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Raw_Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Raw_Log_Retention_Days__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Number of days to retain raw Behavior_Log__c records. After this period, raw logs are deleted but daily summaries are preserved. Defaults to 14 days.</description>
    <inlineHelpText>Days to keep individual event logs (7-90). Daily summaries are kept longer.</inlineHelpText>
    <label>Raw Log Retention (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>