force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Remediation_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Retention_Days__c</fullName>
    <defaultValue>365</defaultValue>
    <description>Number of days to retain Remediation_Log__c audit trail records. Remediation logs older than this are deleted during batch execution. Defaults to 365 days.</description>
    <inlineHelpText>Days to keep auto-fix audit logs (90-730). Longer retention recommended for compliance.</inlineHelpText>
    <label>Remediation Log Retention (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>