force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Snapshot_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Retention_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Number of days to retain Behavior_Snapshot__c trend data records. Snapshots older than this are deleted during batch execution. Defaults to 90 days.</description>
    <inlineHelpText>Days to keep trend snapshot records (30-365). Trend charts need ~30-60 days of history.</inlineHelpText>
    <label>Snapshot Retention (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>