force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Stale_Opportunity_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Stale_Opportunity_Threshold__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Number of days after which an Opportunity is considered stale. Used by the Pattern Analysis Service for dynamic query injection.</description>
    <inlineHelpText>Enter the number of days (1-999) after which an Opportunity should be flagged as stale.</inlineHelpText>
    <label>Stale Opportunity Threshold (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>