force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Summary_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Summary_Retention_Days__c</fullName>
    <defaultValue>365</defaultValue>
    <description>Number of days to retain Behavior_Log_Summary__c aggregated records. These lightweight daily counters power the leaderboard and trend views. Defaults to 365 days.</description>
    <inlineHelpText>Days to keep daily summary records (30-730). These power the leaderboard and trend views.</inlineHelpText>
    <label>Summary Retention (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>