force-app/main/default/objects/BehaviorIQ_Configuration__c/fields/Unassigned_Lead_Hours__c.field-meta.xml
<CustomField>
    <fullName>Unassigned_Lead_Hours__c</fullName>
    <defaultValue>48</defaultValue>
    <description>Number of hours after which an unassigned Lead in a queue is flagged. Used by the Pattern Analysis Service for dynamic query injection.</description>
    <inlineHelpText>Enter the number of hours (1-720) after which leads sitting in a queue should be flagged.</inlineHelpText>
    <label>Unassigned Lead Threshold (Hours)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>