force-app/main/default/objects/BehaviorIQ_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Monitored_Objects__c</columns>
    <columns>Stale_Case_Threshold__c</columns>
    <columns>Stale_Opportunity_Threshold__c</columns>
    <columns>High_Value_Amount_Threshold__c</columns>
    <columns>Contract_Expiry_Days__c</columns>
    <columns>Raw_Log_Retention_Days__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>